# stdioxide

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: app.rs  args.rs  child.rs  control.rs  lib.rs  main.rs  output.rs
src/servers/: health.rs  mod.rs  protocol.rs  stderr.rs
tests/: integration_test.rs  lsp_client.rs  test_utils.rs
