[package]
name = "stdioxide"
version = "0.1.0"
edition = "2024"
license = "MIT"

description = "A simple STDIO forwarder over TCP that also offers a health check port."
repository = "https://github.com/ninjaneers-team/stdioxide"
readme = "README.md"
keywords = ["tcp", "stdio", "tcp-proxy", "language-server", "health-check"]
categories = ["command-line-utilities", "network-programming", "development-tools"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
subprocess = "1.0.3"

[dev-dependencies]
lsp-types = "0.95"
serde_json = "1.0"

[lints.rust]
######################################################################################################################
# Broad rustc lint groups
######################################################################################################################

# Future-proofing and edition migration.
future_incompatible = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

# Useful rustc lint groups.
keyword_idents = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
refining_impl_trait = { level = "warn", priority = -1 }
unknown_or_malformed_diagnostic_attributes = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }

######################################################################################################################
# Lints commonly overridden depending on project state or type
######################################################################################################################

# These can be noisy during early development, but are useful before release.
missing_docs = "warn"
dead_code = "warn"

# Disable if this reports false positives for build-dependencies or target-specific deps.
unused_crate_dependencies = "warn"

######################################################################################################################
# Rust 2024 / compatibility lints worth keeping explicit
######################################################################################################################

boxed_slice_into_iter = "warn"
dependency_on_unit_never_type_fallback = "warn"
deprecated_safe_2024 = "warn"
edition_2024_expr_fragment_specifier = "warn"
if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
keyword_idents_2024 = "warn"
missing_unsafe_on_extern = "warn"
never_type_fallback_flowing_into_unsafe = "warn"
rust_2024_guarded_string_incompatible_syntax = "warn"
rust_2024_incompatible_pat = "warn"
rust_2024_prelude_collisions = "warn"
static_mut_refs = "warn"
tail_expr_drop_order = "warn"
unsafe_attr_outside_unsafe = "warn"

######################################################################################################################
# Lints that should only be overridden for a small scope with a comment explaining the exception
######################################################################################################################

absolute_paths_not_starting_with_crate = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "warn"
let_underscore_drop = "warn"
let_underscore_lock = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_abi = "warn"
non_ascii_idents = "warn"
rust_2021_incompatible_closure_captures = "warn"
rust_2021_incompatible_or_patterns = "warn"
rust_2021_prefixes_incompatible_syntax = "warn"
rust_2021_prelude_collisions = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "warn"
unstable_features = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

# Unstable lints available on nightly only:
# fuzzy_provenance_casts = "warn"
# lossy_provenance_casts = "warn"
# multiple_supertrait_upcastable = "warn"
# must_not_suspend = "warn"
# non_exhaustive_omitted_patterns = "warn"
# unnameable_types = "warn"

[lints.clippy]
######################################################################################################################
# Broad Clippy groups
######################################################################################################################

all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# checks Cargo.toml quality, feature naming, duplicate crate versions, wildcard deps, etc.
cargo = { level = "warn", priority = -1 }

######################################################################################################################
# Lints commonly overridden depending on project state or type
######################################################################################################################

# These are noisy during early development, but useful before release.
missing_panics_doc = "warn"
missing_errors_doc = "warn"

# Disable or locally allow until proper error handling has been implemented.
unwrap_used = "warn"
panic = "warn"
todo = "warn"
expect_used = "warn"
missing_assert_message = "warn"
unwrap_in_result = "warn"
indexing_slicing = "warn"
panic_in_result_fn = "warn"

# Libraries should generally not write to stdout/stderr.
# For CLI binaries, locally allow these in the presentation / command layer with a reason.
print_stderr = "warn"
print_stdout = "warn"

# These two lints can interfere. Keep one allowed globally and handle the other locally.
pattern_type_mismatch = "allow"
needless_borrowed_reference = "warn"

######################################################################################################################
# Cargo / manifest lints
######################################################################################################################

cargo_common_metadata = "warn"
multiple_crate_versions = "warn"
negative_feature_names = "warn"
redundant_feature_names = "warn"
wildcard_dependencies = "warn"

######################################################################################################################
# Extra strict restriction lints worth considering
######################################################################################################################

arithmetic_side_effects = "warn"
as_conversions = "warn"
as_pointer_underscore = "warn"
big_endian_bytes = "warn"
default_numeric_fallback = "warn"
else_if_without_else = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
field_scoped_visibility_modifiers = "warn"
float_arithmetic = "warn"
impl_trait_in_params = "warn"
integer_division = "warn"
little_endian_bytes = "warn"
missing_docs_in_private_items = "warn"
pub_use = "warn"
ref_patterns = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
separated_literal_suffix = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
str_to_string = "warn"
string_add = "warn"
string_to_string = "allow" # Deprecated; keep allowed if older toolchains still mention it.
unnecessary_self_imports = "warn"
wildcard_enum_match_arm = "warn"

######################################################################################################################
# Maintenance lints that are generally overridden, but useful for cleanup
######################################################################################################################

# Noisy, but useful for periodic cleanup.
shadow_unrelated = "warn"

######################################################################################################################
# Lints that should only be overridden for a small scope with a comment explaining the exception
######################################################################################################################

absolute_paths = "warn"
alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_union_representation = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
exit = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
get_unwrap = "warn"
host_endian_bytes = "warn"
if_then_some_else_none = "warn"
infinite_loop = "warn"
inline_asm_x86_att_syntax = "warn"
inline_asm_x86_intel_syntax = "warn"
large_include_file = "warn"
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
min_ident_chars = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
modulo_arithmetic = "warn"
module_name_repetitions = "warn"
multiple_inherent_impl = "allow"
multiple_unsafe_ops_per_block = "warn"
mutex_atomic = "warn"
needless_raw_strings = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_inside_block = "warn"
shadow_same = "warn"
single_char_lifetime_names = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unseparated_literal_suffix = "warn"
verbose_file_reads = "warn"
